Fixes white gap at the bottom of the page on mobile

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -64,7 +64,7 @@
 body {
   // Take into account sticky download button on 'mobile' breakpoint.
   @include mq($until: tablet) {
-    padding-bottom: 50px;
+    padding-bottom: 45px;
   }
 
   &.is-header-fixed {
